--- a/learn-json.html
+++ b/learn-json.html
@@ -8,6 +8,17 @@
   </head>
   <body>
     <button onclick="loadData()">Load Data</button>
+    <button onclick="loadData2()">Load Data 2</button>
+    <button onclick="loadUsers()">Load Users</button>
+    <button onclick="userList()">User List</button>
+
+    <div class="users-contaier">
+      <ol id="users-list"></ol>
+    </div>
+
+    <!-- scripts  -->
     <script src="fetch.js"></script>
+    <script src="app.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
