post api learnt

--- a/learn-json.html
+++ b/learn-json.html
@@ -11,6 +11,9 @@
     <button onclick="loadData2()">Load Data 2</button>
     <button onclick="loadUsers()">Load Users</button>
     <button onclick="userList()">User List</button>
+    <button onclick="createAPost()">Create A Post</button>
+    <button onclick="deleteAPost()">Delete A Post</button>
+    <button onclick="PatchAPost()">Update A Post</button>
 
     <div class="users-contaier">
       <ol id="users-list"></ol>
